Configure production Render API URL, Vercel SPA routing, and wildcard CORS origin patterns